# mcbp-ai

./: .gitignore  ANALYSIS_REPORT.md  BACKEND_TECHNICAL.md  BAS_CODE_MAP.md  CLAUDE.md  GUIDE.md  GUIDE.ua.md  LIMITS.md  README.md
.claude/: settings.json
.claude/agents/: api-client-engineer.md  claude-integration-specialist.md  debugger.md  developer.md  reviewer.md
.claude/refs/: onec-tool-contract.md
.claude/rules/: architecture.md  canonical-refs.md  code-style.md  git-safety.md  karpathy-discipline.md  pipeline-selector.md  shell-workflow.md  surgical-changes.md  task-quality-modes.md  testing.md  workflow.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/claude-api-tool-use/: SKILL.md
.claude/skills/executing-plans/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/fastapi-python/: SKILL.md
.claude/skills/mcbp-onec-integration/: SKILL.md
.claude/skills/model-tool-orchestration-loop/: SKILL.md
.claude/skills/pytest-coverage/: SKILL.md
.claude/skills/python-testing-patterns/: SKILL.md
backend/: .env.example  README.md  diagnose.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
backend/app/: __init__.py  main.py
backend/app/clients/: mcbp.py
backend/app/core/: config.py  deps.py  errors.py  logging_setup.py
backend/app/llm/: base.py  providers.py
backend/app/routers/: ai.py  data.py  system.py
backend/app/services/: ai_orchestrator.py  tools.py
backend/frontend/: app.js  index.html  styles.css
backend/tests/: conftest.py  test_smoke.py
(+5 files in other folders)
